Updated Basic Webpage to have initial site - Added variety of CSS modifications - Added initial information about the team and the project

--- a/index.html
+++ b/index.html
@@ -3,53 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>SolarProx</title>
-    <!-- Local files -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="main.css" rel="stylesheet">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="main.css" rel="stylesheet">
     <!--- BootStrap --->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Local files -->
+
 
 </head>
-<body>
-    <header class="header">
-        <h1>SolarProx</h1>
-        <h2>Your solution to penetration testing with Proxmox</h2>
-        <p></p>
-    </header>
-    <!--- This is the main content --->
-    <div id="wrap">
-        <div id="main" class="container clear-top">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget fringilla mi. Proin diam metus, fringilla ut porttitor sed, suscipit nec purus. Quisque eget nisl sed mi rhoncus mollis. Mauris velit massa, pulvinar non cursus sed, sodales sed arcu. Sed dignissim vestibulum lacus, ac lacinia augue egestas sed. Pellentesque a sollicitudin lectus. Etiam augue urna, dictum quis mauris et, fringilla aliquet enim. Pellentesque ligula turpis, accumsan at erat non, molestie aliquam eros. Vestibulum sagittis arcu pellentesque ullamcorper mollis. Etiam vel est ac eros facilisis facilisis. Maecenas et mi mi.
-
-                Donec imperdiet mollis mattis. Etiam porta volutpat massa, at fringilla diam sagittis bibendum. Morbi iaculis nisi quis quam gravida tincidunt. Nulla at nulla eu libero pellentesque cursus ac at erat. Nam euismod placerat convallis. Nullam dapibus velit sed dui gravida, quis posuere quam posuere. Cras quis venenatis odio. Sed id ante dapibus, semper ex eu, maximus justo. Pellentesque iaculis erat suscipit est fringilla vulputate. In vestibulum rutrum diam ut laoreet. Cras ac purus et orci pretium lobortis sit amet non risus. Donec laoreet fringilla dolor sit amet dictum.
-
-                Morbi pharetra quam quis ligula venenatis efficitur. Phasellus ac condimentum augue, eget convallis ligula. Sed cursus diam in mauris scelerisque vehicula. Donec a neque nunc. In ac libero arcu. Donec sit amet lacinia dui. Duis leo velit, fringilla at tempus sit amet, bibendum a risus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse sit amet mauris vel justo convallis facilisis ut malesuada sapien.
-
-                Nunc et sollicitudin nisi. Integer nec diam metus. Nam luctus egestas eros, at faucibus tortor consectetur eu. In dictum diam id sodales ultricies. Morbi non nulla ac mauris tincidunt eleifend. Nam est quam, vulputate at tincidunt maximus, fermentum non nunc. Phasellus eu mauris at orci mattis sagittis eu eget elit. Morbi tincidunt magna elit, sodales ornare felis consectetur id.
-
-                Donec ac ligula egestas dolor sodales sollicitudin dignissim quis risus. Sed non ligula metus. Sed sed nisl sodales, imperdiet magna eget, accumsan dolor. Sed auctor finibus finibus. Praesent ullamcorper elit ac felis fermentum viverra. Aliquam tristique, nibh in accumsan vehicula, ex nisl eleifend est, ac viverra magna ipsum quis purus. Nulla eget mattis odio. Vestibulum eget scelerisque turpis. Fusce pretium quis quam quis viverra. Cras posuere libero nec malesuada malesuada. Cras ac dui luctus, accumsan est vitae, condimentum massa. Mauris aliquam vulputate nisi vel mattis. Nam maximus congue eros, vitae commodo massa tristique at.
-
-                Mauris consequat feugiat tempor. Vivamus vestibulum ipsum ut mattis porttitor. Ut id orci dictum, elementum tellus id, mollis purus. Aliquam tincidunt malesuada odio. Etiam nunc urna, iaculis eget magna vitae, luctus euismod ante. Donec tincidunt est consectetur, hendrerit elit vel, elementum augue. Suspendisse accumsan sed erat ac interdum.
-
-                Nunc nec nisi vel elit commodo tristique accumsan ut nulla. Cras rutrum commodo magna, at tincidunt dui imperdiet nec. Phasellus cursus tincidunt dolor, sed molestie nulla bibendum sed. Morbi mattis lorem ut purus luctus eleifend. Nunc at velit a erat fringilla porttitor eu in sem. Aenean aliquam vitae nisl id condimentum. In ut scelerisque magna. Aliquam lectus purus, lobortis at pellentesque at, eleifend vitae lacus. Proin mi sem, suscipit non sem ac, sagittis maximus erat. Pellentesque accumsan dolor massa, ac vulputate enim convallis quis. Proin sodales, nulla ut cursus imperdiet, dolor ante luctus metus, sed volutpat enim dolor non justo. Pellentesque tincidunt ultricies convallis.
-
-                Curabitur at erat vel nibh aliquet tempus. Cras id diam ut est semper auctor venenatis et augue. Donec sapien eros, venenatis vitae feugiat eu, ullamcorper vitae felis. Mauris egestas dolor mauris, id tristique felis pellentesque vel. Quisque lacus urna, porttitor et nibh et, lobortis ullamcorper massa. Fusce tristique justo ac nisi porta, quis efficitur ligula tincidunt. Suspendisse ante elit, ultrices ut tincidunt pulvinar, sodales sit amet sem. Suspendisse orci libero, luctus vitae aliquet at, tempus non orci.
-
-                Ut ultrices placerat varius. Praesent accumsan vulputate metus eget gravida. Ut pulvinar dictum nunc, lobortis finibus sem bibendum quis. Donec leo risus, tincidunt vitae quam vitae, varius blandit nulla. Duis tincidunt eleifend odio, vel imperdiet diam fringilla et. Integer in fermentum orci. Duis eget ex eget risus condimentum congue. Donec mattis dolor eget odio aliquet, ut interdum nibh consequat. Curabitur dictum nulla est, nec ullamcorper quam fermentum a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-
-                Nam ut nisi finibus, consectetur lectus non, vulputate nisl. Donec sed viverra erat. Aliquam id sem lorem. Nullam vitae risus quis nisi viverra ornare. Ut dictum vulputate consectetur. Pellentesque sit amet urna a nunc dignissim dignissim. Ut quis faucibus elit, at cursus nunc.
-
-                Nullam sagittis libero sem, ac venenatis mi maximus eu. Nunc in lacus nisl. Phasellus feugiat magna quis est luctus, non sodales turpis sagittis. Cras euismod ante ut est semper, non fringilla enim laoreet. Sed est nisl, eleifend scelerisque leo ut, vehicula elementum turpis. Nullam commodo sagittis diam ac iaculis. Proin quis elit mauris. Pellentesque eget commodo leo. Mauris vitae felis rutrum, lacinia diam in, volutpat ex. Maecenas commodo iaculis risus, eget suscipit felis auctor eget.
-
-                Aliquam bibendum tempus scelerisque. Ut non est vehicula, iaculis nisl scelerisque, maximus tortor. Ut sem lorem, maximus sed lorem at, molestie sagittis purus. Donec lacinia, tellus a ultricies iaculis, enim ex fermentum felis, eu maximus nisl enim in nisi. Phasellus aliquam, erat ut tincidunt ullamcorper, orci velit vehicula tellus, non egestas tellus ligula a urna. Morbi gravida accumsan nibh, ut bibendum mi blandit non. Aliquam egestas sapien elit, nec iaculis arcu hendrerit sed. Mauris consequat, erat id semper condimentum, dolor neque mattis neque, sed interdum enim ipsum maximus metus. Vivamus suscipit felis felis, sit amet fringilla velit cursus at. Praesent sed consequat sem. Suspendisse euismod euismod arcu, convallis tincidunt risus scelerisque at. Phasellus tempor turpis nec eros ultricies, sed fermentum nisl semper.</p>
+<body style="background: #2c5684"> <!-- hardcoded to blue to override boostrap --->
+        <header class="header">
+            <h1>SolarProx</h1>
+            <h2>Your solution to penetration testing with Proxmox</h2>
+        </header>
+        <br>
+        <!--- This is the main content --->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <!--- copy from here to the end of the section div to create
+                    a new category ---->
+                    <div class="section">
+                        <h3>What is SolarProx?</h3>
+                        <div class="sectionBody">
+                            <p>Welcome to Force Of Mercury's latest project, SolarProx. SolarProx is a project
+                            designed to use an assortment of libraries to allow Proxmox, a virtual environment for
+                                running managing virtual machines, to take advantage of active directory for the usage
+                                of managing a lab for penetration testing.
+                            </p>
+                        </div>
+                        <br>
+                    </div>
+                    <div class="section">
+                        <h3>Meet The Team</h3>
+                        <div class="sectionBody">
+                            <ul>
+                                <li>Trevor - Team Leader</li>
+                                <li>Kurt - Tester & QA Expert</li>
+                                <li>Jacob - Lead Architect </li>
+                                <li>Austin - Configurations Manager</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <h3>Useful Links</h3>
+                        <div class="sectionBody">
+                            <ul>
+                                <li><a href="https://github.com/sanforjr2021/SolarProx"> Source Code On Github</a> </li>
+                                <li>Blog Post 1 - Coming Soon!</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <br>
+                </div>
+            </div>
         </div>
-    </div>
-    <footer>
-        <h1>Hi i'm a footer</h1>
-    </footer>
-</body>
+    </body>
 </html>
