--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         </div>
                         <br>
                     </div>
+                    <!---end of section --->
                     <div class="section">
                         <h3>Meet The Team</h3>
                         <div class="sectionBody">
@@ -55,7 +56,7 @@
                         <div class="sectionBody">
                             <ul>
                                 <li><a href="https://github.com/sanforjr2021/SolarProx"> Source Code On Github</a> </li>
-                                <li>Blog Post 1 - Coming Soon!</li>
+                                <li><a href="Blog1.html">Blog - Our first post</a></li>
                             </ul>
                         </div>
                     </div>
