First Blog Post - Originally by austin, reuploaded by me due to not having git on device. -Added resource folder for nonimage files. -Modified text slightly to have a greeting and goodbye.

--- a/Blog1.html
+++ b/Blog1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SolarProx</title>
+    <title>SolarProx - Blog Post 1</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@500&display=swap" rel="stylesheet">
@@ -31,10 +31,26 @@
             <!--- copy from here to the end of the section div to create
             a new category ---->
             <div class="section">
-                <h3>Blog Post 1 - What's up?</h3>
+                <h3>Blog Post 1 - Documents & Housekeeping </h3>
                 <div class="sectionBody">
-                    <p>This is a simple test
+                    <p>
+                        Hi Everyone,<br><br>
+                        Up until this point our main priority has been basic design and required documents.
+                        So far, we have completed our Software Requirements Specification document,
+                        Work Breakdown Schedule, and our Initial Press Release.
+                        The majority of our time has been spent on research to understand the new technologies before
+                        jumping into the deep end of it. We recently constructed a Site Layout using images to show the
+                        different pages along with a User Flow Chart to show the interaction options the user will have.
+                        We have sent this to our client awaiting feedback for any changes he would like in the layout.
+                        <br><br>
+                        Sincerely,<br>
+                        ~The Force Of Mercury Team
                     </p>
+                    <a href="Resources/blog1/Archive.zip" download>All</a><br>
+                    <a href="Resources/blog1/SRS.pdf" download>Software Requirements Specification</a><br>
+                    <a href="Resources/blog1/WBS.pdf" download>Work Breakdown Schedule</a><br>
+                    <a href="Resources/blog1/PressRelease1.pdf" download>Initial Press Release</a><br>
+                    <a href="Resources/blog1/Site_Layout.zip" download>Site Layout</a><br>
                 </div>
                 <br>
             </div>
