Added 492 Intro Presentation

--- a/Blog1.html
+++ b/Blog1.html
@@ -51,6 +51,7 @@
                     <a href="Resources/blog1/WBS.pdf" download>Work Breakdown Schedule</a><br>
                     <a href="Resources/blog1/PressRelease1.pdf" download>Initial Press Release</a><br>
                     <a href="Resources/blog1/Site_Layout.zip" download>Site Layout</a><br>
+                    <a href="Resources/blog1/492%20Intro%20Presentation.pptx" download>492 Intro Powerpoint</a><br>
                 </div>
                 <br>
             </div>
