Added 2nd blog Post

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                         <div class="sectionBody">
                             <ul>
                                 <li><a href="https://github.com/sanforjr2021/SolarProx"> Source Code On Github</a> </li>
-                                <li><a href="Blog1.html">Blog - Our first post</a></li>
+                                <li><a href="Blog1.html">Blog 1 - Our first post</a></li>
+                                <li><a href="Blog2.html">Blog 2 - Design Diagrams and Research</a></li>
                             </ul>
                         </div>
                     </div>
