Moved items because I'm not sure how it was working before

--- a/Blog2.html
+++ b/Blog2.html
@@ -41,7 +41,7 @@
                         ~The Force Of Mercury Team
                     </p>
                     <a href="Resources/blog2/SolarProxModel.mdj" download>UML_DFD Star UML</a><br>
-                    <a href="Resources/blog2/UML_DFD.zip" download>UML_DFD Ziped</a><br>
+                    <a href="Resources/blog2/UML__DFD.zip" download>UML_DFD Ziped</a><br>
                     
                 </div>
                 <br>
