--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                                 <li><a href="https://github.com/sanforjr2021/SolarProx"> Source Code On Github</a> </li>
                                 <li><a href="Blog1.html">Blog 1 - Our first post</a></li>
                                 <li><a href="Blog2.html">Blog 2 - Design Diagrams and Research</a></li>
+                                <li><a href="Blog3.html">Blog 3 - Basic Site Interface and Design Document</a></li>
                             </ul>
                         </div>
                     </div>
