--- a/Blog4.html
+++ b/Blog4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SolarProx - Blog Post 3</title>
+    <title>SolarProx - Blog Post 4</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@500&display=swap" rel="stylesheet">
@@ -31,17 +31,16 @@
             <!--- copy from here to the end of the section div to create
             a new category ---->
             <div class="section">
-                <h3>Blog Post 3 - Basic Site Interface and Design Document </h3>
+                <h3>Blog Post 4 - Establishing a Connection</h3>
                 <div class="sectionBody">
                     <p>
                         Hi Everyone,<br><br>
-                        This week we finalized Design Document #1 and it will be attached below. We also built a basic site using html that will also be attached below. Curently it does not have any of the data conections so we used filler data and a temporary login. In it's current state putting a 1 in the password field directs to the admin pages and any other username and password will direct to the student view. This site is in its initial form so there will still be many changes over time. We also spent time this week to set up a testing environment with proxmox to begin testing data connections. 
+                        We focused this week on making a connection from the SolarProx application to the Proxmox Server that is running. We were able to meet with our client this week to look over some of the server-side Proxmox settings that were enabled so that we could replicate them on our own machine. We were not able to achieve full data retrival, however we were able to cause response errors and bring back null system information. This was still progress because there was atleast a small connection and we recieved back the errors and null values from the server. We belive that server authentication and session keys may be the cause of these issues. We also took some time this week to lay out some of the classes and methods that will be used across the entire application.  
                         <br><br>
                         Sincerely,<br>
                         ~The Force Of Mercury Team
                     </p>
-                    <a href="Resources/blog3/Corrected-DesignDoc1-ForceOfMercury.docx" download>Design Document #1</a><br>
-                    <a href="Resources/blog3/Archive.zip" download>Site Files</a><br>
+                   
                     
                 </div>
                 <br>
