--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                 <li><a href="Blog1.html">Blog 1 - Our first post</a></li>
                                 <li><a href="Blog2.html">Blog 2 - Design Diagrams and Research</a></li>
                                 <li><a href="Blog3.html">Blog 3 - Basic Site Interface and Design Document</a></li>
+                                <li><a href="Blog4.html">Blog 4 - Establishing a Connection</a></li>
                             </ul>
                         </div>
                     </div>
