--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                                 <li><a href="Blog3.html">Blog 3 - Basic Site Interface and Design Document</a></li>
                                 <li><a href="Blog4.html">Blog 4 - Establishing a Connection</a></li>
                                 <li><a href="Blog5.html">Blog 5 - Connection Established</a></li>
+                                <li><a href="Blog6.html">Blog 6 - Prototype Progress</a></li>
                             </ul>
                         </div>
                     </div>
