--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                                 <li><a href="Blog4.html">Blog 4 - Establishing a Connection</a></li>
                                 <li><a href="Blog5.html">Blog 5 - Connection Established</a></li>
                                 <li><a href="Blog6.html">Blog 6 - Prototype Progress</a></li>
+                                <li><a href="Blog7.html">Blog 7 - Completed Prototype</a></li>
                             </ul>
                         </div>
                     </div>
