--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                                 <li><a href="Blog5.html">Blog 5 - Connection Established</a></li>
                                 <li><a href="Blog6.html">Blog 6 - Prototype Progress</a></li>
                                 <li><a href="Blog7.html">Blog 7 - Completed Prototype</a></li>
+                                <li><a href="Blog8.html">Blog 8 - Migration to PHP</a></li>
                             </ul>
                         </div>
                     </div>
