--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                                 <li><a href="Blog6.html">Blog 6 - Prototype Progress</a></li>
                                 <li><a href="Blog7.html">Blog 7 - Completed Prototype</a></li>
                                 <li><a href="Blog8.html">Blog 8 - Migration to PHP</a></li>
+                                <li><a href="Blog9.html">Blog 9 - Testing and User Manual</a></li>
                             </ul>
                         </div>
                     </div>
