--- a/Blog10.html
+++ b/Blog10.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SolarProx - Blog Post 9</title>
+    <title>SolarProx - Blog Post 10</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@500&display=swap" rel="stylesheet">
@@ -31,16 +31,16 @@
             <!--- copy from here to the end of the section div to create
             a new category ---->
             <div class="section">
-                <h3>Blog Post 9 - Testing and User Manual</h3>
+                <h3>Blog Post 10 - Final Changes and Presentation</h3>
                 <div class="sectionBody">
                     <p>
                         Hi Everyone,<br><br>
-                        This week we invited members of our clients current network security class to run security testing against the site. While we were making progress on additional features, we decided that it was best for us to focus on securing the parts of the application that were top priority. The group of penetration testers were working aginst an older version of the software. After we make a few more changes, we will have them run through a new penetration test to validate that all changes were made and no new vulnerabilites have been created. During this week we were also able to submit our rough draft User Manual and make correction to create a final copy. Our revised User Manual will be avalible at the bottom of the page. 
+                        This week we made our final changes to the software. We were able to fully implement the project in the client's lab enviroment. Everything worked as expected and is now linked to the client's Proxmox and Active Directory servers. We also began working on our presentation for tuesday. Our client was very satisfied with the product we provided and we are proud of our work.
                         <br><br>
                         Sincerely,<br>
                         ~The Force Of Mercury Team
                     </p>
-                    <a href="Resources/blog9/Corrected-UsersMan-ForceOfMercury.docx" download>Revised User Manual</a><br>
+                    
                     
                 </div>
                 <br>
