--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                                 <li><a href="Blog7.html">Blog 7 - Completed Prototype</a></li>
                                 <li><a href="Blog8.html">Blog 8 - Migration to PHP</a></li>
                                 <li><a href="Blog9.html">Blog 9 - Testing and User Manual</a></li>
+                                <li><a href="Blog9.html">Blog 10 - Final Changes and Presentation</a></li>
                             </ul>
                         </div>
                     </div>
